--- a/KathyZhang_ML_miniproject2.ipynb
+++ b/KathyZhang_ML_miniproject2.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-16T02:10:13.296809Z",
@@ -56,8 +56,7 @@
     "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
     "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis\n",
     "from sklearn.metrics import mean_absolute_error, r2_score, mean_squared_error\n",
-    "from sklearn.metrics import accuracy_score, precision_score\n",
-    "from sklearn.metrics import confusion_matrix, roc_curve\n",
+    "from sklearn.metrics import accuracy_score, precision_score, confusion_matrix, roc_curve\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sympy import symbols, Eq, solve, exp\n",
     "\n",
@@ -107,9 +106,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='blue'> LPM is a linear parametric model that one must explicitly feed interaction terms for these nuanced relationships to be noticed. However, KNN is a non-parametric model that does not assume a specific form for the relationship between predictors and the outcome, being more flexible. It estimates f(x0) using the average of all the training responses in N0. This approach allows KNN to naturally account for complex interactions between predictors without the need to explicitly model these interactions, which improves accuracy and reduces bias when the true relationship includs the interaction. Also, using KNN, we do not need to sacrifice TN for TP and vice versa. the parametric approach will only outperform the nonparametric \n",
-    "approach if the parametric form that has been selected is clos \r\n",
-    "to the true form of f."
+    "<font color='blue'> LPM is a linear parametric model that one must explicitly feed interaction terms for these nuanced relationships to be noticed, resulting in bias if not added. However, KNN is a non-parametric model that does not assume a specific form for the relationship between predictors and the outcome, being more flexible. It estimates f(x0) using the average of all the training responses in N0. This approach allows KNN to naturally account for complex interactions between predictors without the need to explicitly model these interactions, which improves accuracy and reduces bias when the true relationship includs the interaction. Also, using KNN, we do not need to sacrifice TN for TP and vice versa."
    ]
   },
   {
@@ -137,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +269,7 @@
        "4          1.416      0.2832     0  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -472,20 +469,20 @@
        "max      1.000000  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Descriptive Statistics\n",
-    "pd.set_option('display.max_columns', None)\n",
+    "pd.set_option('display.max_columns', None) # no column will be hidden in output\n",
     "audit.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -567,22 +564,21 @@
        "642          1.446      0.2892     0  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Check for missing values\n",
-    "na_count = pd.DataFrame(np.sum(audit.isna(), axis = 0),\n",
-    "                        columns = [\"Count NAs\"])\n",
+    "na_count = pd.DataFrame(np.sum(audit.isna(), axis = 0), columns = [\"Count NAs\"])\n",
     "print(na_count)\n",
     "audit[audit['Money_Value'].isna()]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +669,7 @@
        "Risk                   0"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,13 +677,12 @@
    "source": [
     "# Drop the NA value in Money_Value\n",
     "audit = audit[audit['Money_Value'].notna()]\n",
-    "pd.DataFrame(np.sum(audit.isna(), axis = 0),\n",
-    "             columns = [\"Count NAs\"])"
+    "pd.DataFrame(np.sum(audit.isna(), axis = 0), columns = [\"Count NAs\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -856,7 +851,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,18 +863,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Splitting testing and training data\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X, target, test_size=0.50, random_state=13)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, target, test_size=0.50, random_state=13)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -889,7 +883,7 @@
        "       1.03733079, 0.92258489, 0.11778926, 0.56594786, 1.69933872])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -915,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +918,7 @@
        "array([1, 0, 0, 1, 0, 1, 1, 0, 1, 1])"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -954,15 +948,14 @@
    "source": [
     "# Generate the condusion matrix\n",
     "cm_lpm_5 = confusion_matrix(y_test, y_pred_lpm_bin_5)\n",
-    "cm_lpm_5_norm = confusion_matrix(\n",
-    "    y_test, y_pred_lpm_bin_5, normalize = 'true')\n",
+    "cm_lpm_5_norm = confusion_matrix(y_test, y_pred_lpm_bin_5, normalize = 'true')\n",
     "print(cm_lpm_5)\n",
     "print(cm_lpm_5_norm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -978,8 +971,7 @@
    ],
    "source": [
     "# Draw the heatmap\n",
-    "ax = sns.heatmap(cm_lpm_5_norm, annot=True,\n",
-    "                 fmt='.2%', cmap='Blues')\n",
+    "ax = sns.heatmap(cm_lpm_5_norm, annot=True, fmt='.2%', cmap='Blues')\n",
     "\n",
     "ax.set_title('LPM: Confusion Matrix with labels, threshold=0.5\\n')\n",
     "ax.set_xlabel('\\nPredicted Values')\n",
@@ -1000,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1009,7 +1001,7 @@
        "array([1, 0, 0, 0, 0, 1, 1, 0, 0, 1])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1022,7 +1014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1039,15 +1031,14 @@
    "source": [
     "# Generate the condusion matrix\n",
     "cm_lpm_6 = confusion_matrix(y_test, y_pred_lpm_bin_6)\n",
-    "cm_lpm_6_norm = confusion_matrix(\n",
-    "    y_test, y_pred_lpm_bin_6, normalize = 'true')\n",
+    "cm_lpm_6_norm = confusion_matrix(y_test, y_pred_lpm_bin_6, normalize = 'true')\n",
     "print(cm_lpm_6)\n",
     "print(cm_lpm_6_norm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1094,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1177,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1186,7 +1177,7 @@
        "array([1, 0, 0, 1, 0, 1, 1, 0, 1, 1], dtype=int64)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1205,7 +1196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1228,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1272,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1327,7 +1318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1449,7 +1440,7 @@
        "4 -0.207059 -0.819385      -0.297523   -0.178289  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1465,7 +1456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1632,31 +1623,30 @@
        "max    1.383479e+01  1.382901e+01  2.907824e+00      14.314970  2.468112e+01  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# View the summary statistics table\n",
-    "pd.set_option('display.max_columns', None)\n",
+    "pd.set_option('display.max_columns', None) # no column will be hidden in output\n",
     "X_final.describe()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Splitting testing and training data\n",
-    "X_train, X_test, y_train, y_test = train_test_split(\n",
-    "    X_final, target, test_size=0.50, random_state=13)"
+    "X_train, X_test, y_train, y_test = train_test_split(X_final, target, test_size=0.50, random_state=13)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1665,7 +1655,7 @@
        "array([1, 0, 0, 0, 0, 1, 1, 0, 1, 1], dtype=int64)"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1691,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1714,7 +1704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1758,7 +1748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1801,7 +1791,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='blue'> Reading true positives from the confusion matrix, 144/(144+7) = 95.36% of the firms predicted to evade their taxes actually evaded taxes."
+    "<font color='blue'> Reading true positives from the confusion matrix, 90.57% of the firms predicted to evade their taxes actually evaded taxes."
    ]
   },
   {
@@ -1815,7 +1805,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<font color='blue'> The KNN model without the predictors nomalized performs better in general with a error rate of 3.61%, accuracy of 96.39% and precision of 98%, with lower false negatives and lower false positives.  In contrast, with normalization, KNN error rate increases to 5.67%, precision drops to 95.36%. 95.36% of the firms predicted to evade their taxes actually evaded taxes using the normalized model, while 98.01% predicted right for unnormalized model. It is noticeable that when using KNN in this case, KNN without normalization is better in reducing errors, increasing precision, reducing FP and FN, unlike using different thresholds for LPM."
+    "<font color='blue'> The KNN model without the predictors nomalized performs better in general with a error rate of 3.61%, accuracy of 96.39% and precision of 98%, with lower false negatives and lower false positives. In contrast, with normalization, KNN error rate increases to 5.67%, precision drops to 95.36%. It is noticeable that when using KNN in this case, KNN without normalization is better in reducing errors, increasing precision, reducing FP and FN, unlike using different thresholds for LPM."
    ]
   },
   {
@@ -1836,7 +1826,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1845,7 +1835,7 @@
        "27.83882181415011"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1858,7 +1848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1879,33 +1869,14 @@
     "knni = KNeighborsClassifier()\n",
     "\n",
     "# Set up 5-fold cross-validation scheme\n",
-    "knn_cv = GridSearchCV(knni, para, cv=KFold(\n",
-    "    5, random_state=13, shuffle=True), scoring='accuracy')\n",
+    "knn_cv = GridSearchCV(knni, para, cv=KFold(5, random_state=13, shuffle=True), scoring='accuracy')\n",
     "\n",
     "# Fit the model\n",
     "knn_cv.fit(X, target)\n",
     "\n",
     "print(\"Best parameters:\", knn_cv.best_params_)\n",
-    "print(\"Best cross-validation score:\",\n",
-    "      f'{round(knn_cv.best_score_, 4)*100}%')\n",
-    "print(\"Lowest classfication error rate:\",\n",
-    "      f'{round(1-knn_cv.best_score_, 4)*100}%')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 9. In the long run, what problem might arise from the nature of the sample if the government \n",
-    "heavily uses your best KNN model to target audits Hint: the firms in the data are all firm \r\n",
-    "that were audited."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<font color='blue'> In the long-run, if the government heavilt uses the KNN to model target with K = 1(best model), it could result in overfitting and selection bias. The model may not generalize well to the entire population of firms, inferior when predicting new cases. Also, since our best K = 1, though a small value for K provides the most flexible fit, it will have low bias but high variance, due to the fact that the prediction in a given region is entirely dependent on just one observation. In terms of selection bias, if audited firms share certain characteristics that triggered the audit, the model might only focus on these characteristics, which could lead to a cycle where firms with similar features are continually targeted, while other potentially non-compliant firms that lack these characteristics are overlooked...s."
+    "print(\"Best cross-validation score:\", f'{round(knn_cv.best_score_, 4)*100}%')\n",
+    "print(\"Lowest classfication error rate:\", f'{round(1-knn_cv.best_score_, 4)*100}%')"
    ]
   }
  ],
