--- a/KathyZhang_ML_miniproject2.ipynb
+++ b/KathyZhang_ML_miniproject2.ipynb
@@ -4,9 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color='blue'> PPHA 30546 Machine Learning | Mini Project 2 </font> \n",
+    "# <font color='blue'> PPHA 30546 Machine Learning | Mini Project 2 Government Tax Audit </font> \n",
     "\n",
-    "Kathy Zhang & Yimeng Wu"
+    "Kathy Zhang"
    ]
   },
   {
